--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,114 @@
-body {
-  margin: 0;
-  padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+* {
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+html {
+  position: relative;
+  min-height: 100%;
+}
+
+body {
+  margin: 0 0 100px;
+  padding: 0;
+  font-family: 'Cabin', sans-serif;
+  background-color: #e8eded;
+}
+
+a {
+  text-decoration: none;
+  color: #000;
+}
+
+ul {
+  list-style: none;
+  padding-left: 0
+}
+
+fieldset {
+  border: none;
+}
+
+legend {
+  font-size: 24px;
+  text-align: center;
+  padding: 15px 0;
+}
+
+.button-icon {
+  margin-right: 5px;
+}
+
+/* FONT OPTIONS */
+
+.item-heading {
+  font-family: 'Roboto', sans-serif;
+  font-size: 1em;
+}
+
+/* FORM OPTIONS */
+.form-group {
+  padding-bottom: 15px;
+}
+
+.form-input input {
+  width: 100%;
+}
+
+.form-input textarea {
+  width: 100%;
+}
+
+.form-button-container {
+  text-align: center;
+  margin: 10px 0;
+}
+
+.form-button {
+  padding: 10px 25px;
+  border: 1px solid #00bd70;
+  border-radius: 3px;
+  background-color: #00bd70;
+  color: #fff;
+  cursor: pointer;
+}
+
+.form-button:hover {
+  background-color: #098709;
+  border: 1px solid #098709;
+}
+
+.signup-login-redirect {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  margin: 10px 0;
+}
+
+.redirect-prompt {
+  margin: 0;
+}
+
+.signup-login-redirect-link {
+  color: #00bd70;
+  margin-left: 5px;
+  text-decoration: underline;
+}
+
+.submit-button {
+  margin-right: 10px;
+}
+
+.cancel-button {
+  margin-left: 10px;
+}
+
+#gender {
+  width: auto;
+}
+
+/* GENERAL MEDIA QUERIES */
+@media screen and (min-width: 768px) {
+  .form-label-container {
+    text-align: right;
+  }
 }
